--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,7 @@
    "outputs": [],
    "source": [
     "def find_term_derivative(term):\n",
-    "    constant[0]"
+    "    constant[0]="
    ]
   },
   {
