--- a/index.ipynb
+++ b/index.ipynb
@@ -154,7 +154,7 @@
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
-    "    constant=term[0]*term[1]\n",
+    "    derivative_terms\n",
     "    "
    ]
   },
