Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -254,7 +254,7 @@
     "#     return sum(outputs)\n",
     "\n",
     "from calculus import output_at\n",
-    "\n",
+    "    for term\n",
     "def derivative_at(terms, x):\n",
     "    pass"
    ]
