--- a/index.ipynb
+++ b/index.ipynb
@@ -254,9 +254,12 @@
     "#     return sum(outputs)\n",
     "\n",
     "from calculus import output_at\n",
-    "    for term\n",
-    "def derivative_at(terms, x):\n",
-    "    pass"
+    "    def derivative_at(terms, x):\n",
+    "    derivative_fn = find_derivative(terms)\n",
+    "    total = 0\n",
+    "    for term in derivative_fn:\n",
+    "        total += term[0]*x**term[1]\n",
+    "    return total"
    ]
   },
   {
